--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Mindset Consultoria
+    %title Chamados Fatec
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -10,10 +10,10 @@
     = stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'
     %script{ src: "https://cdn.ckeditor.com/4.15.0/standard/ckeditor.js" }
   %body.bg-light
-    = render 'shared/shared_header'
+    = render 'shared/header'
 
     .container-fluid.text-center.px-0.py-5
       = render 'shared/alert'
       = yield
 
-    = render 'shared/shared_footer'
+    = render 'shared/footer'
