--- a/app/views/shared/_alert.html.haml
+++ b/app/views/shared/_alert.html.haml
@@ -1,7 +1,10 @@
-- if flash[:success]
-  .alert.alert-success.my-4.text-center
-    = flash[:success]
+.row.justify-content-center
+  - if flash[:success]
+    .col-8
+      .alert.alert-success.m-4.text-center
+        = flash[:success]
 
-- if flash[:error]
-  .alert.alert-danger.my-4.text-center
-    = flash[:error]
+  - if flash[:error]
+    .col-8
+      .alert.alert-danger.m-4.text-center
+        = flash[:error]
