--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,10 +7,10 @@
       %span.navbar-toggler-icon
     .collapse.navbar-collapse#navbarNav
       %ul.navbar-nav.mr-auto
-        %li.nav-item
-          = link_to t('customers.index.customers'), customers_path, class: 'nav-link text-white'
-        %li.nav-item
-          = link_to t('consultants.index.consultants'), consultants_path, class: 'nav-link text-white'
+        -# %li.nav-item
+        -#   = link_to t('customers.index.customers'), customers_path, class: 'nav-link text-white'
+        -# %li.nav-item
+        -#   = link_to t('consultants.index.consultants'), consultants_path, class: 'nav-link text-white'
         %li.nav-item
           = link_to t('treatments.index.treatments'), treatments_path, class: 'nav-link text-white'
       %ul.navbar-nav
