--- a/app/views/treatments/_form.html.haml
+++ b/app/views/treatments/_form.html.haml
@@ -1,8 +1,11 @@
 = simple_form_for @treatment do |f|
   = f.input :title
   = f.input :treatment_type, collection: treatment_types_for_select
-  = f.input :description, as: :ckeditor, input_html: { ckeditor: { toolbar: 'Full' } }
-  = f.input :status, disabled: true, placeholder: Treatment.human_attribute_name("status.#{@treatment.status}")
-  = f.association :customer, collection: customers_for_select
-  = f.association :consultant, collection: consultants_for_select
+  = f.input :description
+  - if current_user.consultant?
+    = f.input :status, collection: treatment_statuses_for_select
+    = f.association :atendant, collection: User.where.not(atendant_id: nil)
+
+  -# = f.association :customer, collection: customers_for_select
+  -# = f.association :consultant, collection: consultants_for_select
   .mt-4= f.submit
