--- a/app/views/treatments/index.html.haml
+++ b/app/views/treatments/index.html.haml
@@ -1,29 +1,33 @@
-.row.my-4
-  .col
-    %h1= t('.treatments')
+= stylesheet_link_tag('views/treatments/index')
 
 .container-fluid
   .row.my-4.justify-content-center
-    .col-xl-1
-      .button.btn-block.btn-primary.rounded= link_to t('.new_treatment'), new_treatment_path, class: 'text-white'
+    .col
+      - if current_user.consultant?
+        %h1
+          = t('.treatments')
+      - else
+        %h1
+          = t('.my_treatments')
 
-  .row.justify-content-center
-    .col-xs-9.border.rounded
-      %table.table-striped
-        %thead
-          %tr
-            %th= t('.treatment_number')
-            %th= t('.title')
-            %th= t('.responsable')
-            %th= t('.status')
-            %th= t('.type')
-            %th= t('.created_at')
-        %tbody
-          - @treatments.each do |treatment|
-            %tr
-              %th= treatment.id
-              %td= link_to treatment.title, treatment_path(treatment), class: 'text-dark'
-              %td= treatment.consultant.name
-              %td= Treatment.human_attribute_name("status.#{treatment.status}")
-              %td= Treatment.human_attribute_name("treatment_type.#{treatment.treatment_type}")
-              %td= treatment.created_at.strftime("%d/%m/%Y")
+  .row.my-4.justify-content-center
+    .col-12
+      %button.btn.btn-primary.btn-lg
+        = link_to t('.new_treatment'), new_treatment_path, class: 'text-white'
+
+      %hr
+
+  .row
+    .offset-4.col-4
+      %h2= 'Filtros'
+      = render 'filters'
+  
+  %hr
+
+  - if @treatments.present?
+    = render 'treatments'
+  
+  - else
+    %h2
+      %strong
+        = 'Sem Chamados'
