--- a/app/views/treatments/index.html.haml
+++ b/app/views/treatments/index.html.haml
@@ -17,12 +17,12 @@
 
       %hr
 
-  .row
-    .offset-4.col-4
-      %h2= 'Filtros'
-      = render 'filters'
+  -# .row
+  -#   .offset-4.col-4
+  -#     %h2= 'Filtros'
+  -#     = render 'filters'
   
-  %hr
+  -# %hr
 
   - if @treatments.present?
     = render 'treatments'
