--- a/app/assets/stylesheets/views/treatments/index.scss
+++ b/app/assets/stylesheets/views/treatments/index.scss
@@ -1,10 +1,11 @@
 .card {
   .card-header {
-    min-height: 100px;
+    min-height: 120px;
 
     h4 {
       &.title {
         font-weight: 900;
+        color: black;
       }
     }
   }
@@ -12,9 +13,23 @@
   .card-body {
     h5 {
       &.treatment-attribute {
-        color: blue;
+        // color: blue;
         font-weight: 900;
       }
     }
+  }
+
+  a {
+    color: black;
+  }
+
+  &.in_progress {
+    border-color: #00569D;
+    background-color: #7BB4EC;
+  }
+
+  &.waiting {
+    border-color: #b0120a;
+    background-color: #f9bdbb;  
   }
 }
