--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,37 +1,42 @@
+= stylesheet_link_tag('views/users/sessions/new')
+
 .container-fluid
   .row.my-4
     .col
-      %h2 Sign up
+      .card.login-box
+        .card-body
+          %h2 Cadastrar
 
-      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = f.error_notification
-        .form-inputs
-          = f.input :name,
-            required: true,
-            autofocus: true,
-            input_html: { autocomplete: "name" }
+          = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+            = f.error_notification
+            .form-inputs
+              = f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }
 
-          = f.label :user_Type, 
-            required: true
-          
-          = f.select :user_type,
-            User.user_types.keys,
-            required: true
+              .col-12
+                = f.label :user_Type, 
+                  required: true
+              
+              .mb-4= f.select :user_type,
+                User.user_types.keys,
+                required: true
 
-          = f.input :email,
-            required: true,
-            autofocus: true,
-            input_html: { autocomplete: "email" }
+              = f.input :email,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }
 
-          = f.input :password,
-            required: true,
-            hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-            input_html: { autocomplete: "new-password" }
+              = f.input :password,
+                required: true,
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                input_html: { autocomplete: "new-password" }
 
-          = f.input :password_confirmation,
-            required: true,
-            input_html: { autocomplete: "new-password" }
+              = f.input :password_confirmation,
+                required: true,
+                input_html: { autocomplete: "new-password" }
 
-        .form-actions
-          = f.button :submit, "Sign up"
-      = render "devise/shared/links"
+            .form-actions
+              = f.button :submit, "Cadastrar", class: 'btn btn-primary btn-lg'
+          -# = render "devise/shared/links"
