--- a/app/views/treatments/_form.html.haml
+++ b/app/views/treatments/_form.html.haml
@@ -4,7 +4,7 @@
   = f.input :description
   - if current_user.consultant?
     = f.input :status, collection: treatment_statuses_for_select
-    = f.association :atendant, collection: User.where.not(atendant_id: nil)
+    -# = f.association :atendant, collection: User.where.not(atendant_id: nil)
 
   -# = f.association :customer, collection: customers_for_select
   -# = f.association :consultant, collection: consultants_for_select
